--- a/artprima/prometheus-metrics-bundle/1.0/config/packages/test/prometheus-metrics.yaml
+++ b/artprima/prometheus-metrics-bundle/1.0/config/packages/test/prometheus-metrics.yaml
@@ -1,3 +1,6 @@
 artprima_prometheus_metrics:
     namespace: myapp
-    type: in_memory
+    type: apcu
+    ignored_routes:
+    - prometheus_bundle_prometheus
+    - _wdt
