--- a/artprima/prometheus-metrics-bundle/1.0/config/packages/test/prometheus-metrics.yaml
+++ b/artprima/prometheus-metrics-bundle/1.0/config/packages/test/prometheus-metrics.yaml
@@ -1,6 +1,6 @@
 artprima_prometheus_metrics:
     namespace: myapp
-    type: apcu
+    type: in_memory
     ignored_routes:
     - prometheus_bundle_prometheus
     - _wdt
